--- a/FinalProject/Pages/Single.cshtml
+++ b/FinalProject/Pages/Single.cshtml
@@ -49,7 +49,12 @@
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
     <script type="text/javascript">
         let transportType = signalR.TransportType.WebSockets;
-        let http = new signalR.HttpConnection(`http://${document.location.host}/hubs/game`, { transport: transportType });
+        try {
+            let http = new signalR.HttpConnection(`http://${document.location.host}/hubs/game`, { transport: transportType });
+        } catch (err) {
+            let http = new signalR.HttpConnection("https://desolate-tundra-52228.herokuapp.com/hubs/game", { transport: transportType });
+        }
+        
         let connection = new signalR.HubConnection(http);
         connection.start();
 
