--- a/FinalProject/Pages/_Layout.cshtml
+++ b/FinalProject/Pages/_Layout.cshtml
@@ -33,8 +33,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
                     <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
                     <li><a asp-page="/Single">Single</a></li>
+                    <li><a asp-page="/Spectate">Spectate</a></li>
                 </ul>
             </div>
         </div>
