--- a/FinalProject/Pages/Single.cshtml
+++ b/FinalProject/Pages/Single.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FinalProject.Pages.SingleModel
+@model SingleModel
 @{
     ViewData["Title"] = "Single";
 }
@@ -45,13 +45,11 @@
 
 
 @section Scripts {
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
     <script type="text/javascript">
         let transportType = signalR.TransportType.WebSockets;
         let http = new signalR.HttpConnection("https://desolate-tundra-52228.herokuapp.com/hubs/game", { transport: transportType });        
         let connection = new signalR.HubConnection(http);
-        connection.start();
 
         function continueToGame() {
             $(".username-container").hide();
@@ -73,7 +71,7 @@
         });
 
 
-
+        connection.start();
 
 
         connection.on("SendBoard", function (message) {
