--- a/FinalProject/Pages/About.cshtml
+++ b/FinalProject/Pages/About.cshtml
@@ -3,7 +3,20 @@
 @{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@Model.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p id="group-container">Group Information</p>
+
+<div class="info-container">
+    <div>
+        <p>Name: Ngô Đình Khôi</p>
+        <p>ID: ITITIU16035</p>
+    </div>
+    <div>
+        <p>Name: Vũ Nhật Thanh</p>
+        <p>ID: ITITIU16054</p>
+    </div>
+    <div>
+        <p>Name: Nguyễn Trung Hiếu</p>
+        <p>ID: ITITIU15061</p>
+    </div>
+</div>
