--- a/FinalProject/Pages/Single.cshtml
+++ b/FinalProject/Pages/Single.cshtml
@@ -1,17 +1,18 @@
 ﻿@page
 @model SingleModel
 @{
-    ViewData["Title"] = "Single";
+    ViewData["Title"] = "Play";
 }
 
-<h2>Single</h2>
-
 <div class="username-container">
-    <input type="text" id="username" required size="30" />
     <input type="submit" value="Continue" onclick="continueToGame()" />
 </div>
-<div class="game-container" style="display: none">
-
+<div class="game-container" >
+    <div id="button">
+        <div id="title">2048</div>
+        <button id='score'>SCORE<br></button>
+        <button id='undo'>UNDO<br></button>
+    </div>
     <div class="grid-container">
         <div class="grid-row">
             <div class="grid-cell"></div>
@@ -37,8 +38,8 @@
             <div class="grid-cell"></div>
             <div class="grid-cell"></div>
         </div>
-    </div>
-    <div class="tile-container">
+        <div class="tile-container">
+        </div>
     </div>
 </div>
 
@@ -48,305 +49,242 @@
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
     <script type="text/javascript">
         let transportType = signalR.TransportType.WebSockets;
-        let http = new signalR.HttpConnection("https://desolate-tundra-52228.herokuapp.com/hubs/game", { transport: transportType });        
+        let http = new signalR.HttpConnection(`http://${document.location.host}/hubs/game`, { transport: transportType });
         let connection = new signalR.HubConnection(http);
 
         function continueToGame() {
-            $(".username-container").hide();
-            $(".game-container").fadeIn("slow").show();
             connection.invoke("GetBoard");
-            connection.invoke("Connect", $("#username").text());
-            connection.invoke("CreateRoom", $("#username").text());
-
+            connection.invoke("Connect", $("#username").val());
         }
 
 
         connection.on("Connected", function (message) {
-            console.log(message);
-        });
-
-        connection.on("CreateRoom", function (message) {
-            console.log(message);
 
         });
+
+        connection.on("SendBoard", function (message) {
+            gameContainer(message);
+
+        });
+
 
 
         connection.start();
+        //VARIABLE
+        var tileContainer = document.querySelector(".tile-container");
+        var score = 0;
+        var stack = [];
+        this.tiles = [];
+        this.values = [];
+        this.colorHex = {
+            "v0": "#D2D2C8",
+            "v2": "#FA5252",
+            "v4": "#607BB0",
+            "v8": "#9FE660",
+            "v16": "#E6D960",
+            "v32": "#C77070",
+            "v64": "#4DA6FF",
+            "v128": "#FF0000",
+            "v256": "#967FF9",
+            "v512": "#000080",
+            "v1024": "#f3904f",
+            "v2048": "#8080ff"
+        };
 
 
-        connection.on("SendBoard", function (message) {
-            var game = new GameManager(message.cells);
-            document.addEventListener("keypress", function (event) {
-                var direction;
-                switch (event.key.toUpperCase()) {
-                    case "D":
-                        direction = "LEFT";
-                        break;
-                    case "A":
-                        direction = "RIGHT";
-                        break;
-                    case "W":
-                        direction = "UP";
-                        break;
-                    case "S":
-                        direction = "DOWN";
-                        break;
 
+        this.map = {
+
+            'UP': { row: 1, col: 0, x: 1, y: 0 },
+            'LEFT': { row: 0, col: -1, x: 0, y: 1 },
+            'DOWN': { row: -1, col: 0, x: 1, y: 0 },
+            'RIGHT': { row: 0, col: 1, x: 0, y: 1 }
+        };
+
+        //document.addEventListener("DOMContentLoaded", function () {
+        //    setup();
+        //    addRandom();
+        //    addRandom();
+        //    pushStack();
+        //    render();
+        //});
+
+        //SETUP AND RENDER
+
+        function render() {
+            for (var i = 0; i < 4; i++) {
+                this.tiles[i] = [];
+                for (var j = 0; j < 4; j++) {
+                    this.tiles[i][j] = document.createElement("div");
+                    this.tiles[i][j].className = "tile";
+                    tileContainer.appendChild(this.tiles[i][j]);
+                    var value = this.values[i][j];
+                    $(this.tiles[i][j]).css("background", this.colorHex[`v${value}`]);
+                    this.tiles[i][j].innerHTML = (value != 0) ? value : "";
+                    var x = 110 * j + 10;
+                    var y = 110 * i + 10;
+                    $(this.tiles[i][j]).css("left", `${x}px`);
+                    $(this.tiles[i][j]).css("top", `${y}px`);
                 }
-                game.handler(direction);
-                connection.invoke("ShareBoard", $("#username").text(), this.cells);
-            });
-
-        });
-
-
-
-
-        function GameManager(cells) {
-            this.cells = cells;
-            this.setup();
-
+            }
         }
 
-        GameManager.prototype.setup = function () {
-            this.gameOver = false;
-            this.tileContainer = document.querySelector(".tile-container");
-            this.savedPosition = [];
-            this.isAvailable = [];
-            this.index = [];
-            var value = 0;
-            for (var i = 0; i < 4; i++) {
-                this.index[i] = [];
-                for (var j = 0; j < 4; j++) {
-                    this.index[i][j] = value;
-                    value++;
-                }
+        //CREATE TILE
 
-            }
-
-            this.map = {
-                'UP': { row: 1, col: 0, x: 1, y: 0 },
-                'LEFT': { row: 0, col: -1, x: 0, y: 1 },
-                'DOWN': { row: -1, col: 0, x: 1, y: 0 },
-                'RIGHT': { row: 0, col: 1, x: 0, y: 1 }
-            };
-
-            this.tiles = [];
-            for (var i = 0; i < 4; i++) {
-                for (var j = 0; j < 4; j++) {
-                    this.tiles[this.index[i][j]] = document.createElement("div");
-                    this.tiles[this.index[i][j]].className = "tile";
-                    this.tileContainer.appendChild(this.tiles[this.index[i][j]]);
-                    if (this.cells[this.index[i][j]].value != 0) {
-                        this.tiles[this.index[i][j]].innerHTML = this.cells[this.index[i][j]].value;
-
-                    }
-                    var x = 10;
-                    var y = 10;
-                    x += 110 * j;
-                    y += 110 * i;
-                    $(this.tiles[this.index[i][j]]).css("left", `${x}px`);
-                    $(this.tiles[this.index[i][j]]).css("top", `${y}px`);
-                }
-
-            }
-
-
+        function addRandom() {
+            do {
+                var x = Math.floor(Math.random() * 4);
+                var y = Math.floor(Math.random() * 4);
+            } while (this.values[x][y])
+            this.values[x][y] = Math.random() < 0.9 ? 2 : 4;
+            setTile(x, y);
         }
 
-        GameManager.prototype.handler = function (direction) {
-            var row;
-            var col;
-            var state = { changed: 0 };
-
+        function setTile(x, y) {
+            $(this.tiles[x][y]).css("background", this.colorHex[`v${this.values[x][y]}`]);
+            $(this.tiles[x][y]).addClass("new-tile");
+            $(this.tiles[x][y]).html(this.values[x][y]);
+            setTimeout(function () {
+                $(this.tiles[x][y]).removeClass("new-tile");
+            }, 150);
+        }
+        //SET TILE POSITION
+        function handler(direction) {
+            var state = { changed: false };
             switch (direction) {
-                case 'UP':
-                    row = 0;
-                    col = 0;
-                    break;
-                case 'LEFT':
-                    row = 0;
-                    col = 3;
-                    break;
-                case 'DOWN':
-                    row = 3;
-                    col = 0;
-                    break;
-                case 'RIGHT':
-                    row = 0;
-                    col = 0;
-                    break;
+                case 'UP': move(0, 0, direction, state); break;
+                case 'LEFT': move(0, 3, direction, state); break;
+                case 'DOWN': move(3, 0, direction, state); break;
+                case 'RIGHT': move(0, 0, direction, state); break;
             }
-
-            this.move(row, col, direction, state);
-
-            if (state.changed == 1) {
-                this.collectAvailableCells();
-                this.addNewNumber();
-
+            if (state.changed) {
+                addRandom();
+                checkGameOver();
+                pushStack();
+                connection.invoke("ShareBoard", this.values);
             }
-            this.checkGameOver();
+            $("#score").html("SCORE<br>" + this.score);
         }
 
-        GameManager.prototype.move = function (row, col, direction, state) {
-            while (true) {
-
+        function move(row, col, direction, state) {
+            while (!(row > 3 || row < 0 || col > 3 || col < 0)) {
                 var currentRow = row;
                 var currentCol = col;
-                while (true) {
-                    if (currentRow > 3 || currentRow < 0 || currentCol > 3 || currentCol < 0) {
-                        break;
-
-                    }
-                    var current = this.cells[this.index[currentRow][currentCol]];
-
+                while (!(currentRow > 3 || currentRow < 0 || currentCol > 3 || currentCol < 0)) {
                     var nextRow = currentRow + this.map[direction].row;
                     var nextCol = currentCol + this.map[direction].col;
-                    if (nextRow > 3 || nextRow < 0 || nextCol > 3 || nextCol < 0) {
-                        break;
-
-                    }
-                    while (true) {
-
-                        var next = this.cells[this.index[nextRow][nextCol]];
-                        if (next.value == 0) {
+                    while (!(nextRow > 3 || nextRow < 0 || nextCol > 3 || nextCol < 0)) {
+                        if (this.values[nextRow][nextCol] == 0) {
                             nextRow += this.map[direction].row;
                             nextCol += this.map[direction].col;
-                            if (nextRow > 3 || nextRow < 0 || nextCol > 3 || nextCol < 0) {
-                                break;
-
-                            }
-                        } else if (next.value == current.value) {
-                            current.value <<= 1;
-                            next.value = 0;
-                            this.updatePosition(currentRow, currentCol, nextRow, nextCol, current.value);
-                            state.changed = 1;
+                        } else if (this.values[nextRow][nextCol] == this.values[currentRow][currentCol]) {
+                            this.values[currentRow][currentCol] <<= 1;
+                            score += this.values[currentRow][currentCol];
+                            this.values[nextRow][nextCol] = 0;
+                            updatePosition(currentRow, currentCol, nextRow, nextCol, this.values[currentRow][currentCol]);
+                            state.changed = true;
                             break;
-
                         } else {
-                            if (current.value == 0 && next.value != 0) {
-                                current.value = next.value;
-                                next.value = 0;
-                                this.updatePosition(currentRow, currentCol, nextRow, nextCol, current.value);
-                                state.changed = 1;
+                            if (this.values[currentRow][currentCol] == 0 && this.values[nextRow][nextCol] != 0) {
+                                this.values[currentRow][currentCol] = this.values[nextRow][nextCol];
+                                this.values[nextRow][nextCol] = 0;
+                                updatePosition(currentRow, currentCol, nextRow, nextCol, this.values[currentRow][currentCol]);
+                                state.changed = true;
                                 currentRow -= this.map[direction].row;
                                 currentCol -= this.map[direction].col;
                                 break;
-                            } else if (current.value != 0) {
+                            } else if (this.values[currentRow][currentCol] != 0) {
                                 break;
-
                             }
-
                         }
-
-
                     }
                     currentRow += this.map[direction].row;
                     currentCol += this.map[direction].col;
-
-
                 }
                 row += this.map[direction].y;
                 col += this.map[direction].x;
-
-                if (row > 3 || row < 0) {
-                    break;
-
-                }
-                if (col > 3 || col < 0) {
-                    break;
-
-                }
             }
         }
 
-        GameManager.prototype.updatePosition = function (currentRow, currentCol, nextRow, nextCol, value) {
-            var currentTile = this.tiles[this.index[currentRow][currentCol]];
-            var nextTile = this.tiles[this.index[nextRow][nextCol]];
+        function updatePosition(currentRow, currentCol, nextRow, nextCol, value) {
+            var currentTile = this.tiles[currentRow][currentCol];
+            var nextTile = this.tiles[nextRow][nextCol];
             var clone = nextTile.cloneNode(true);
             nextTile.innerHTML = "";
-            this.tileContainer.appendChild(clone);
+            $(nextTile).css("background", "none");
+            var colorHex = this.colorHex[`v${value}`];
+            tileContainer.appendChild(clone);
             $(clone).animate({
                 "left": `${$(currentTile).css("left")}`,
-                "top": `${$(currentTile).css("top")}`
-            });
+                "top": `${$(currentTile).css("top")}`,
+            }, 100);
             setTimeout(function () {
                 $(clone).remove();
                 currentTile.innerHTML = value;
-            }, 500);
+                $(currentTile).css("background", colorHex);
+            }, 100);
         }
 
-        GameManager.prototype.checkGameOver = function () {
-            for (var i = 0; i < 4; i++) {
-                for (var j = 0; j < 4; j++) {
-                    if (i - 1 >= 0) {
-                        if (this.cells[this.index[i - 1][j]] == this.cells[this.index[i][j]]) {
-                            return;
+        //UNDO FEATURE
+        function pushStack() {
+            for (var x = 0; x < 4; x++) for (var y = 0; y < 4; y++) stack.push(this.values[x][y]);
+            stack.push(score);
+        }
 
-                        }
-
-                    }
-                    if (i + 1 < 4) {
-                        if (this.cells[this.index[i + 1][j]] == this.cells[this.index[i][j]]) {
-                            return;
-
-                        }
-
-                    }
-                    if (j - 1 >= 0) {
-                        if (this.cells[this.index[i][j - 1]] == this.cells[this.index[i][j]]) {
-                            return;
-
-                        }
-
-                    }
-                    if (j + 1 < 4) {
-                        if (this.cells[this.index[i][j + 1]] == this.cells[this.index[i][j]]) {
-                            return;
-
-                        }
-
-                    }
-                    if (this.cells[this.index[i][j]]) {
-                        return;
-
-                    }
-
-                }
-
+        function makeUndo() {
+            if (stack.length > 25) {
+                $("#title").html('2048');
+                stack.splice(-17, 17);
+                score = stack.pop();
+                $("#score").html("SCORE<br>" + score);
+                for (var x = 3; x >= 0; x--) for (var y = 3; y >= 0; y--) values[x][y] = stack.pop();
+                $(tileContainer).empty();
+                pushStack();
+                render();
+                connection.invoke("ShareBoard", this.values);
             }
-            this.gameOver = true;
-
         }
 
-        GameManager.prototype.collectAvailableCells = function () {
-            for (var i = 0; i < 16; i++) {
-                if (this.cells[i].value == 0) {
-                    this.isAvailable.push(this.cells[i]);
+        //CHECK ENDGAME
+        function checkGameOver() {
+            if (isEnd()) $("#title").html('END!');
+        }
+
+        function isEnd() {
+            var counter = 0;
+            for (var x = 0; x < 4; x++) for (var y = 0; y < 4; y++)
+                if (this.values[x][y] != 0) counter++;
+            if (counter == 16) {
+                counter = 0;
+                for (var x = 0; x < 4; x++) for (var y = 0; y < 4; y++) {
+                    var a = ((x + 1) < 4) ? this.values[x + 1][y] : 0;
+                    var b = ((x - 1) >= 0) ? this.values[x - 1][y] : 0;
+                    var c = ((y + 1) < 4) ? this.values[x][y + 1] : 0;
+                    var d = ((y - 1) >= 0) ? this.values[x][y - 1] : 0;
+                    if (![a, b, c, d].includes(this.values[x][y])) counter++;
                 }
             }
-
+            return (counter == 16) ? true : false;
         }
 
-        GameManager.prototype.addNewNumber = function () {
-            var i = Math.floor(Math.random() * (this.isAvailable.length - 1));
-            var index = this.cells.indexOf(this.isAvailable[i]);
-            this.isAvailable[i].value = 2;
-            var newTile = this.tiles[index];
-            $(newTile).addClass("new-tile");
-            newTile.innerHTML = 2;
-            setTimeout(function () {
-                $(newTile).removeClass("new-tile");
-            }, 400);
+        //KEYBOARD AND MOUSE CONTROLLER
 
-
-            while (this.isAvailable.length > 0) {
-                this.isAvailable.pop();
-
+        function gameContainer(cells) {
+            this.values = cells;
+            render();
+            connection.invoke("ShareBoard", cells);
+            document.onkeydown = function (e) {
+                switch (e.keyCode) {
+                    case 37: handler("RIGHT"); break;
+                    case 38: handler("UP"); break;
+                    case 39: handler("LEFT"); break;
+                    case 40: handler("DOWN"); break;
+                }
             }
-
+            $('#undo').click(function () {
+                makeUndo();
+            });
 
         }
-
     </script>
 }
